<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/width_dialog"
    android:layout_height="@dimen/height_dialog"
    android:layout_marginLeft="@dimen/margin_left_dialog"
    android:background="?attr/dialogBg">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/padding_dialog_left"
        android:paddingRight="@dimen/padding_dialog_right">

        <TextView
            android:id="@+id/txtMessageDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_message_require_bluetooth"
            android:textColor="?attr/dialogTitleTextColor"
            android:textSize="@dimen/text_size_message_dialog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top_button_dialog"
            android:layout_below="@+id/txtMessageDialog"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnLeftDialog"
                android:layout_width="@dimen/button_width_size_dialog"
                android:background="@drawable/dialog_btn_selector"
                android:text="@string/text_button_dialog_quit"
                android:textAllCaps="false"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_message_dialog"
                android:layout_height="@dimen/button_height_size_dialog" />

            <Button
                android:id="@+id/btnRightDialog"
                android:layout_width="wrap_content"
                android:minWidth="@dimen/button_width_size_dialog"
                android:layout_marginLeft="@dimen/margin_button_dialog"
                android:text="@string/text_button_dialog_ok"
                android:gravity="center"
                android:textAllCaps="false"
                android:padding="@dimen/padding_button_unregister"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_message_dialog"
                android:background="@drawable/dialog_btn_selector"
                android:layout_height="@dimen/button_height_size_dialog" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>